# lnrs-db-app

./: .gitignore  CLAUDE.md  CRUD_APP_DEVELOPMENT_PLAN.md  DATABASE_SELECTOR_IMPLEMENTATION_PLAN.md  DEPLOYMENT.md  DUCKDB_FK_LIMITATION.md  FK_ANALYSIS.md  IMPLEMENTATION_PLAN_CORE_EXPORTS.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE_1_IMPLEMENTATION.md  PHASE_2_IMPLEMENTATION.md  PHASE_3_IMPLEMENTATION.md  PHASE_7D_USER_GUIDE.md  PHASE_7_IMPLEMENTATION.md  PRE_DEPLOYMENT_CHECKLIST.md  README.md  SCHEMA_REACT_EMBED_PLAN.md  SECRETS_TEMPLATE.md  TRANSACTIONS_1_3_TESTS.md  TRANSACTION_DEPLOYMENT_PLAN.md  app.py  debug_grant_delete.py  deploy-streamlit-advice.md  get_schema.py  lnrs-db-scratchpad.sql  lnrs-tables.md  lnrs_3nf_o1.sql  lnrs_3nf_o1_schema.xml  lnrs_to_motherduck.sql  motherduck_caching_strategy.md  project.faf  pyproject.toml  requirements.txt  streamlit_deploy_motherduck_implementation_plan.md  test_all_deletes.py  test_csv_export.py  test_database_selector.py  test_local_mode.py  test_logging.py  test_measure_delete.py  (+8 more)
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: backup_strategy_deployment.md  code_style_conventions.md  (+8 more)
.streamlit/: secrets.toml.template
config/: backup.py  database.py  logging_config.py  monitoring.py
docs/: TROUBLESHOOTING.md
models/: area.py  base.py  grant.py  habitat.py  measure.py  priority.py  relationship.py  species.py
tests/: __init__.py  conftest.py  test_backup_restore_integration.py  test_backups.py  test_end_to_end.py  test_transactions.py
utils/: schema_diagram_mermaid_backup.py
(+16 files in other folders)
