[project]
name = "lnrs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.1",
    "ipykernel>=7.1.0",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.2.1",
    "sqlfluff>=3.5.0",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
